@@ -350,5 +350,7 @@ Revision history for Perl extension Net::SSLeay.
 	- Update so net-ssleay will compile if SSLV2 is not present. Patch
 	from Chris Butler.
 	- Fixed a problem where sslcat (and possibly other functions) expect RSA keys and will not
-	load DSA keys for client certificates. Reported and patched by "Jesse DeFer via RT"
+	load DSA keys for client certificates. Reported and patched by "Jesse
+	DeFer via RT"
+        - Removed SSL_CTX_v2_new and SSLv2_method() for OpenSSL 1.0 and later.
 #EOF
